Update reroll page for 2025 rankings and methods

--- a/reroll.html
+++ b/reroll.html
@@ -13,10 +13,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO OPTIMIZATION: 最新情報とキーワードを盛り込みCTRを向上 -->
-    <meta name="description" content="【プロスピA】リセマラを最速で終わらせる効率的なやり方・進め方を完全解説！2026年最新のB9&TH第1弾・第2弾当たりランキングと終了ラインを紹介。">
+    <meta name="description" content="【プロスピA】リセマラ当たりランキング2025最新版！OB第4弾の最強選手を徹底評価。効率的なリセマラ方法と、リセマラの終了ラインを完全解説。">
     <meta name="keywords" content="プロスピA,リセマラ,当たり,ランキング,効率,OB第4弾,最強,2025">
     
-    <title>【プロスピA】リセマラ最速攻略2026！B9&TH当たりランキング・終了ラインを完全解説
+    <title>【プロスピA】リセマラ当たりランキング2025最新版！OB第4弾対応</title>
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css-reroll.css">
@@ -104,7 +104,7 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1 class="page-title">【プロスピA】リセマラ最速攻略2026！B9&TH当たりランキング・終了ラインを完全解説
+            <h1 class="page-title">【プロスピA】リセマラ当たりランキング2025最新版！</h1>
             <p class="page-subtitle">最強のSランク選手を最速で入手！リセマラの完全ガイド</p>
         </div>
     </section>
@@ -138,7 +138,7 @@
 
                     <!-- Reroll Method -->
                     <section class="section reroll-method">
-                        <h2 class="section-title">📱 最速で終わる！効率的なリセマラのやり方・手順</h2>
+                        <h2 class="section-title">📱 効率的なリセマラ方法と手順</h2>
                         <div class="method-steps">
                             <div class="step-card">
                                 <div class="step-number">1</div>
@@ -221,7 +221,7 @@
 
                     <!-- Top Players Ranking -->
                     <section class="section top-players-ranking">
-                        <h2 class="section-title">🌟 リセマラ当たりランキング：2026年B9&TH対応</h2>
+                        <h2 class="section-title">🏆 リセマラ当たりランキング：OB第4弾対応</h2>
                         <div class="ranking-tabs">
                             <button class="ranking-tab active" data-position="all">総合</button>
                             <button class="ranking-tab" data-position="pitcher">投手</button>
@@ -235,29 +235,29 @@
                                     <div class="tier-label">S+</div>
                                     <div class="ranking-players">
                                         <div class="ranking-player">
-                                            <img src="/placeholder.svg?height=60&width=45" alt="R・マルティネス">
+                                            <img src="/placeholder.svg?height=60&width=45" alt="松坂大輔">
                                             <div class="player-info">
-                                                <span class="name">R・マルティネス</span>
-                                                <span class="position">投手 (B9第1弾)</span>
+                                                <span class="name">松坂 大輔</span>
+                                                <span class="position">投手 (OB)</span>
                                             </div>
                                         </div>
                                         <div class="ranking-player">
-                                            <img src="/placeholder.svg?height=60&width=45" alt="佐藤輝明">
+                                            <img src="/placeholder.svg?height=60&width=45" alt="バース">
                                             <div class="player-info">
-                                                <span class="name">佐藤 輝明</span>
-                                                <span class="position">外野手 (B9第1弾)</span>
+                                                <span class="name">バース</span>
+                                                <span class="position">一塁手 (OB)</span>
                                             </div>
                                         </div>
                                         <div class="ranking-player">
-                                            <img src="/placeholder.svg?height=60&width=45" alt="村上頌樹">
+                                            <img src="/placeholder.svg?height=60&width=45" alt="柳田悠岐">
                                             <div class="player-info">
-                                                <span class="name">村上 頌樹</span>
-                                                <span class="position">投手 (B9第2弾)</span>
+                                                <span class="name">柳田 悠岐</span>
+                                                <span class="position">外野手</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="tier-description">
-                                        <p><b>【最優先】</b>2026年B9&TH第1弾・第2弾の最強クラス選手。R・マルティネスは総合値167で現役最強投手、佐藤輝明はパワーA級の最強打者です。無料10連で獲得できれば大成功です。</p>
+                                        <p><b>【最優先】</b>現環境のリアタイ・リーグで最強クラスの選手。特に松坂・バースは期間限定のため、リセマラの最優先ターゲットです。</p>
                                     </div>
                                 </div>
 
@@ -266,29 +266,29 @@
                                     <div class="tier-label">S</div>
                                     <div class="ranking-players">
                                         <div class="ranking-player">
-                                            <img src="/placeholder.svg?height=60&width=45" alt="モイネロ">
+                                            <img src="/placeholder.svg?height=60&width=45" alt="中村紀洋">
                                             <div class="player-info">
-                                                <span class="name">モイネロ</span>
-                                                <span class="position">投手 (B9第1弾)</span>
+                                                <span class="name">中村 紀洋</span>
+                                                <span class="position">三塁手 (OB)</span>
                                             </div>
                                         </div>
                                         <div class="ranking-player">
-                                            <img src="/placeholder.svg?height=60&width=45" alt="東克樹">
+                                            <img src="/placeholder.svg?height=60&width=45" alt="山本由伸">
                                             <div class="player-info">
-                                                <span class="name">東 克樹</span>
-                                                <span class="position">投手 (B9第1弾)</span>
+                                                <span class="name">山本 由伸</span>
+                                                <span class="position">投手</span>
                                             </div>
                                         </div>
                                         <div class="ranking-player">
-                                            <img src="/placeholder.svg?height=60&width=45" alt="大勢">
+                                            <img src="/placeholder.svg?height=60&width=45" alt="坂本勇人">
                                             <div class="player-info">
-                                                <span class="name">大勢</span>
-                                                <span class="position">投手 (B9第2弾)</span>
+                                                <span class="name">坂本 勇人</span>
+                                                <span class="position">内野手</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="tier-description">
-                                        <p><b>【大当たり】</b>B9&TH第1弾・第2弾の優秀な投手陣。モイネロは総合値162で最優秀選手賞受賞、東克樹は対ピンチ持ちで安定感抜群です。</p>
+                                        <p><b>【大当たり】</b>チームの主力として長く活躍できる非常に優秀な選手。中村紀洋選手はリアタイで必須級の性能です。</p>
                                     </div>
                                 </div>
 
