Update mainEntityOfPage URL and remove Breadcrumbs
Updated the mainEntityOfPage URL and removed Breadcrumbs JSON-LD script.

--- a/realtime-tips.html
+++ b/realtime-tips.html
@@ -32,7 +32,7 @@
       "@type": "Article",
       "headline": "【プロスピA】リアタイ攻略｜打てるようになるコツとおすすめ設定",
       "description": "プロスピAのリアタイで打率を上げる実践テクニック。強振の使い方、配球の読み方、設定推奨値、最強選手ランキングまで。",
-      "mainEntityOfPage": "https://example.com/reitai-kouryaku.html",
+      "mainEntityOfPage": "https://purosupi-a.f5.si/realtime-tips.html",
       "image": ["https://example.com/assets/og-image-reitai.jpg"],
       "author": {"@type": "Person", "name": "プロスピA攻略編集部"},
       "publisher": {"@type": "Organization", "name": "プロスピA攻略サイト", "logo": {"@type": "ImageObject","url": "https://example.com/assets/logo.png"}},
@@ -44,17 +44,7 @@
     </script>
 
     <!-- Breadcrumbs (JSON-LD) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [
-        {"@type": "ListItem", "position": 1, "name": "ホーム", "item": "https://example.com/"},
-        {"@type": "ListItem", "position": 2, "name": "攻略ガイド", "item": "https://example.com/guides.html"},
-        {"@type": "ListItem", "position": 3, "name": "リアタイ攻略", "item": "https://example.com/reitai-kouryaku.html"}
-      ]
-    }
-    </script>
+
 
     <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
     <link rel="stylesheet" href="style.css">
