Update event references from '育星ストリート' to '必勝アリーナ'

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="【プロスピA攻略】2026年最新イベント「育星ストリート」やB9&TH第3弾を最速攻略！侍ジャパン2026予想、OB第5弾、リアタイ攻略、リセマラ、最強選手ランキングなど、攻略情報を毎日更新。">
-    <meta name="keywords" content="プロスピA,プロ野球スピリッツA,攻略,侍ジャパン2026,B9&TH,育星ストリート,OB第5弾,リセマラ,選手評価,リアタイ">
+    <meta name="description" content="【プロスピA攻略】2026年最新イベント「必勝アリーナ」やB9&TH第3弾を最速攻略！侍ジャパン2026予想、OB第5弾、リアタイ攻略、リセマラ、最強選手ランキングなど、1万PV突破の攻略情報を毎日更新。">
+    <meta name="keywords" content="プロスピA,プロ野球スピリッツA,攻略,侍ジャパン2026,B9&TH,必勝アリーナ,OB第5弾,リセマラ,選手評価,リアタイ">
     <meta name="author" content="プロスピA攻略サイト">
     <meta name="c8282260dbcb9470c838cea1b9419dae4556e3e1" content="c8282260dbcb9470c838cea1b9419dae4556e3e1" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://purosupi-a.f5.si/">
-    <meta property="og:title" content="【プロスピA攻略】侍ジャパン2026予想・B9&TH第3弾・育星ストリート最新情報">
+    <meta property="og:title" content="【プロスピA攻略】侍ジャパン2026予想・B9&TH第3弾・必勝アリーナ最新情報">
     <meta property="og:description" content="プロ野球スピリッツAの最新攻略情報。侍ジャパン予想やリアタイ攻略など、勝てる情報を詳しく解説。">
     <meta property="og:image" content="https://purosupi-a.f5.si/image.jpg">
-    <title>【プロスピA攻略】侍ジャパン2026予想・B9&TH第3弾・育星ストリート最新情報 - プロスピA攻略サイト</title>
+    <title>【プロスピA攻略】侍ジャパン2026予想・B9&TH第3弾・最新イベント情報</title>
     <link rel="stylesheet" href="style.css">
     <script type="application/ld+json">
     {
@@ -48,7 +48,7 @@
         }
       },{
         "@type": "Question",
-        "name": "現在開催中の「育星ストリート」でSランク契約書は取れますか？",
+        "name": "現在開催中の「必勝アリーナ」でSランク契約書は取れますか？",
         "acceptedAnswer": {
           "@type": "Answer",
           "text": "はい、累計報酬でSランク契約書が獲得可能です。自操作で練習効率を上げ、効率よくポイントを稼ぐのが完走のコツです。詳細は攻略記事をご覧ください。"
@@ -82,10 +82,10 @@
         <div class="container">
             <div class="hero-content">
                 <h2 class="hero-title">【プロスピA】最新攻略＆トレンド情報</h2>
-                <p class="hero-subtitle">侍ジャパン2026予想・B9&TH第3弾・育星ストリート攻略を最速更新中！</p>
+                <p class="hero-subtitle">侍ジャパン2026予想・B9&TH第3弾・必勝アリーナ攻略を最速更新中！</p>
                 <div class="hero-buttons">
                     <a href="samurai-2026.html" class="btn btn-primary">侍ジャパン2026予想</a>
-                    <a href="event-street.html" class="btn btn-secondary">育星ストリート攻略</a>
+                    <a href="event-arena.html" class="btn btn-secondary">必勝アリーナ攻略</a>
                 </div>
             </div>
         </div>
@@ -135,12 +135,12 @@
                             <article class="news-card">
                                 <div class="news-image">
                                     <div style="background: linear-gradient(45deg, #FF851B, #FF4136); color: white; padding: 1rem; text-align: center; height: 120px; display: flex; align-items: center; justify-content: center;">
-                                        <h3 style="font-size: 1.2rem;">育星ストリート</h3>
+                                        <h3 style="font-size: 1.2rem;">必勝アリーナ</h3>
                                     </div>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title"><a href="event-street.html">【育星ストリート攻略】効率的な進め方と累計報酬回収のコツ</a></h3>
-                                    <p class="news-excerpt">最新イベント「育星ストリート」を最速攻略！Sランク契約書を確実に獲得するための練習メニュー選びを伝授。</p>
+                                    <h3 class="news-title"><a href="event-arena.html">【必勝アリーナ攻略】効率的な進め方と累計報酬回収のコツ</a></h3>
+                                    <p class="news-excerpt">最新イベント「必勝アリーナ」を最速攻略！Sランク契約書を確実に獲得するための練習メニュー選びを伝授。</p>
                                     <div class="news-meta">
                                         <span class="news-date">2026年2月6日</span>
                                         <span class="news-category">イベント</span>
